# pylibdeflate

./: .gitignore  CMakeLists.txt  README.md  pylibdeflate.c  setup.py
matlab/: build.bat  zlib_compress.c  zlib_decompress.c
