CMAKE_MINIMUM_REQUIRED(VERSION 3.16)
PROJECT (pylibdeflate)

IF (NOT WIN32)
  SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC")
ENDIF()

SET(LIBDEFLATE_BUILD_STATIC_LIB ON CACHE BOOL "")
SET(LIBDEFLATE_BUILD_SHARED_LIB OFF CACHE BOOL "")
SET(LIBDEFLATE_BUILD_GZIP OFF CACHE BOOL "")

add_subdirectory(libdeflate)

find_package (Python COMPONENTS Interpreter Development)

INCLUDE_DIRECTORIES(${Python_INCLUDE_DIRS})
ADD_LIBRARY(pylibdeflate SHARED
  pylibdeflate.c)
message(STATUS "python: ${Python_EXECUTABLE}")
message(STATUS "python include dir: ${Python_INCLUDE_DIRS}")
TARGET_LINK_LIBRARIES(pylibdeflate Python::Module libdeflate_static)
IF(MSVC)
  SET_TARGET_PROPERTIES(
    pylibdeflate
    PROPERTIES
    SUFFIX ".pyd"
    )
  SET_TARGET_PROPERTIES(pylibdeflate PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}
    RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}
    )
ELSEIF(APPLE)
  SET_TARGET_PROPERTIES(
    pylibdeflate
    PROPERTIES
    SUFFIX ".so"
    )
  SET_TARGET_PROPERTIES(pylibdeflate PROPERTIES PREFIX "")
ELSE()
  SET_TARGET_PROPERTIES(pylibdeflate PROPERTIES PREFIX "")
ENDIF()
